--- a/frontend/return.html
+++ b/frontend/return.html
@@ -4,147 +4,147 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Return a Book</title>
+    <title>List Books</title>
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
             margin: 0;
             padding: 0;
             display: flex;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             height: 100vh;
-            background-color: #FFF5EE;
         }
 
-        .container {
-            width: 400px;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            text-align: center;
-        }
-
-        h2 {
-            color: #600080;
-        }
-
-        label {
+        label,
+        input,
+        button {
+            margin-bottom: 16px;
             display: block;
-            margin: 15px 0 8px;
-            color: #333;
-            font-size: 14px;
-            text-align: left;
-        }
-
-        input {
-            width: calc(100% - 16px);
-            padding: 10px;
-            margin-bottom: 15px;
-            box-sizing: border-box;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 14px;
         }
 
         button {
-            background-color: #600080;
+            background-color: #4caf50;
             color: #fff;
-            padding: 12px;
+            padding: 10px;
             border: none;
-            border-radius: 4px;
+            border-radius: 5px;
             cursor: pointer;
-            width: 100%;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
         }
 
-        button:hover {
-            background-color: #450056;
+        table {
+            width: 60%;
+            margin-top: 20px;
+            border-collapse: collapse;
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
         }
 
-        .message {
-            margin-top: 15px;
-            font-size: 14px;
-            color: #008000;
+        table,
+        th,
+        td {
+            border: 1px solid #ddd;
         }
 
-        .error-message {
-            color: #FF0000;
+        th,
+        td {
+            padding: 12px;
         }
 
-        .loading-spinner {
-            display: none;
-            border: 4px solid rgba(0, 0, 0, 0.1);
-            border-radius: 50%;
-            border-top: 4px solid #600080;
-            width: 20px;
-            height: 20px;
-            animation: spin 1s linear infinite;
-            margin: 20px auto;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+        th {
+            background-color: #4caf50;
+            color: white;
         }
     </style>
 </head>
 
 <body>
-    <div class="container">
-        <h2>Return a Book</h2>
-        <label for="book_id">Book ID:</label>
-        <input type="text" id="book_id" name="book_id" required>
+    <div>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
 
-        <label for="member_id">Member ID:</label>
-        <input type="text" id="member_id" name="member_id" required>
-
-        <button onclick="returnBook()">Return Book</button>
-
-        <div class="loading-spinner" id="loadingSpinner"></div>
-        <div class="message" id="successMessage"></div>
-        <div class="error-message" id="errorMessage"></div>
+        <button id="listBooksButton">List Books Borrowed</button>
     </div>
 
+    <div>
+        <label for="use">Username</label>
+        <input type="text" id="user" name="user" required>
+        <label for="bookId">Borrowed Book ID:</label>
+        <input type="text" id="bookId" name="bookId" required>
+
+        <button id="returnBookButton">Return Book</button>
+    </div>
+
+    <div id="resultTableContainer"></div>
+
     <script>
-        function returnBook() {
-            const bookId = document.getElementById('book_id').value;
-            const memberId = document.getElementById('member_id').value;
-            const successMessage = document.getElementById('successMessage');
-            const errorMessage = document.getElementById('errorMessage');
-            const loadingSpinner = document.getElementById('loadingSpinner');
+        document.getElementById('listBooksButton').addEventListener('click', function () {
+            var username = document.getElementById('username').value;
 
-            // Reset messages and show loading spinner
-            successMessage.innerText = '';
-            errorMessage.innerText = '';
-            loadingSpinner.style.display = 'block';
-
-            fetch('http://127.0.0.1:5000/borrow', {
+            fetch('http://127.0.0.1:5000/listBooks', {
                 method: 'POST',
                 headers: {
-                    'Content-Type': 'application/json',
+                    'Content-Type': 'application/x-www-form-urlencoded',
                 },
-                body: JSON.stringify({
-                    book_id: bookId,
-                    member_id: memberId,
-                }),
+                body: 'username=' + encodeURIComponent(username)
             })
                 .then(response => response.json())
                 .then(data => {
-                    loadingSpinner.style.display = 'none';
-                    successMessage.innerText = data.message;
+                    displayResults(data);
                 })
-                .catch(error => {
-                    console.error('Error:', error);
-                    loadingSpinner.style.display = 'none';
-                    errorMessage.innerText = 'Invalid Cridentials';
+                .catch(error => console.error('Error:', error));
+        });
+
+        document.getElementById('returnBookButton').addEventListener('click', function () {
+            var bookId = document.getElementById('bookId').value;
+            var username = document.getElementById('user').value;
+
+
+            fetch('http://127.0.0.1:5000/returnBook', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded',
+                },
+                body: 'username=' + encodeURIComponent(username) + '&bookId=' + encodeURIComponent(bookId)
+            })
+                .then(response => response.json())
+                .then(data => {
+                    alert(data.message);
+                })
+                .catch(error => console.error('Error:', error));
+        });
+
+        function displayResults(data) {
+            var resultTableContainer = document.getElementById('resultTableContainer');
+            resultTableContainer.innerHTML = '';
+
+            if (data.length > 0) {
+                var table = document.createElement('table');
+                var headerRow = table.createTHead().insertRow(0);
+
+                Object.keys(data[0]).forEach(function (key) {
+                    var th = document.createElement('th');
+                    th.textContent = key.charAt(0).toUpperCase() + key.slice(1);
+                    headerRow.appendChild(th);
                 });
+
+                data.forEach(function (item) {
+                    var row = table.insertRow(-1);
+
+                    Object.values(item).forEach(function (value) {
+                        var cell = row.insertCell(-1);
+                        cell.textContent = value;
+                    });
+                });
+
+                resultTableContainer.appendChild(table);
+            } else {
+                resultTableContainer.textContent = 'No books borrowed.';
+            }
         }
     </script>
 </body>
 
 </html>
-
-
